<resources>
    <string name="app_name">DashboardUU</string>
    <string name="text_pass">Пароль (символы)</string>
    <string name="text_name">Имя</string>
    <string name="text_btn_up">Зарегистрироваться</string>
    <string name="text_btn_in">Войти</string>
    <string name="text_sign_in">Приглашение</string>
    <string name="text_sign_up">Регистрация</string>
    <string name="edit_text">Edit Text</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="main_title">My Dashboard</string>
    <string name="logout_fragment">LogOut</string>
    <string name="profile_fragment">Profile</string>
    <string name="telephone">Телефон</string>
    <string name="password">Пароль: %1$s</string>
    <string name="login">Имя: %1$s</string>
    <string name="phone">Телефон: %1$s</string>
    <string name="daily_plan">Дневной план %1$s</string>

</resources>