<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1E7DD2"
    tools:context=".SignUpFragment">

       <TextView
           android:id= "@+id/title"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_margin="@dimen/text_margin"
           android:gravity="center_horizontal"
           android:padding="@dimen/text_margin"
           android:text="@string/text_sign_up"
           android:textColor="@color/white"
           android:textSize="@dimen/text_size"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintTop_toTopOf="parent"
           app:layout_constraintBottom_toTopOf="@+id/image"
           />

       <ImageView
        android:id="@+id/image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_account_foreground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintBottom_toTopOf="@+id/etUserNameSignUp"

           />

       <EditText
           android:id="@+id/etUserNameSignUp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:gravity="center_horizontal"
           android:background="@drawable/rounded_corner"
           android:layout_margin="30dp"
           android:hint="@string/text_name"
           android:textColor="@color/white"
           android:textSize="@dimen/text_size"
           android:inputType="text"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/image"

           />

       <EditText
           android:id="@+id/etUserPassSignUp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:gravity="center_horizontal"
           android:layout_margin="30dp"
           android:background="@drawable/rounded_corner"
           android:hint="@string/text_pass"
           android:textColor="@color/white"
           android:textSize="@dimen/text_size"
           android:inputType="textPassword"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/etUserNameSignUp"
           app:layout_constraintBottom_toTopOf="@+id/etUserPhoneSignUp"
           />

       <EditText
           android:id="@+id/etUserPhoneSignUp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:gravity="center_horizontal"
           android:layout_margin="30dp"
           android:background="@drawable/rounded_corner"
           android:hint="@string/telephone"
           android:textColor="@color/white"
           android:textSize="@dimen/text_size"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/etUserPassSignUp"
           />

       <Button
           android:id="@+id/btnLoginSignUp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_gravity="center"
           android:layout_margin="30dp"
           android:text="@string/text_btn_up"
           android:textSize="@dimen/text_size"
           android:textColor="@color/blue"
           android:backgroundTint="@color/white"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/etUserPhoneSignUp"
/>

</androidx.constraintlayout.widget.ConstraintLayout>